# bevy_gearbox_editor

./: Cargo.toml  README.md  manhattan-plan.md  parent-plan.md
assets/: repeater.scn.ron  repeatertest.scn.ron
assets/examples/: repeater.scn.ron
examples/: animated_character.rs  app_state.rs  custom_payload.rs  door.rs  repeater.rs
src/: components.rs  context_menu.rs  editor_state.rs  entity_inspector.rs  entity_ui.rs  hierarchy.rs  lib.rs  machine_list.rs  main.rs  node_editor.rs  node_kind.rs  reflectable.rs  resources.rs  systems.rs  utils.rs  window_management.rs
src/components/: entity_node.rs  leaf_node.rs  mod.rs  parent_node.rs
src/ui/: connections.rs  dialogs.rs  mod.rs  node_renderer.rs  widgets.rs
