[package]
name = "bevy_gearbox_editor"
version = "0.3.3"
edition = "2021"
description = "State machine system for the bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox_editor"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox_editor"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = "0.16.1"
bevy-inspector-egui = "0.32.0"
bevy_asset = "0.16.1"
bevy_ecs = "0.16.1"
bevy_egui = "0.35.1"
bevy_gearbox = { path = "../bevy_gearbox" }
bevy_reflect = "0.16.1"
disqualified = "1.0.0"
egui = "0.31.1"
smallvec = "1.15.1"