[package]
name = "bevy_gearbox_editor"
version = "0.4.2"
edition = "2021"
description = "State machine system for the bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox_editor"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox_editor"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_log",
    "bevy_asset",
    "bevy_scene",
    "bevy_camera",
    "bevy_window",
] }
bevy_asset = { version = "0.17", default-features = false, features = [] }
bevy_ecs = { version = "0.17", default-features = false, features = [] }
bevy_reflect = { version = "0.17", default-features = false, features = [] }

bevy-inspector-egui = "0.34.0"
bevy_egui = "0.37.0"
disqualified = "1.0.0"
egui = "0.32.0"
smallvec = "1.15.1"

bevy_gearbox = { version = "0.4.0", path = "../bevy_gearbox" }

[dev-dependencies]
bevy = "0.17"